// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Credential renders correctly with data 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "alignItems": undefined,
      "backgroundColor": "#000000",
      "borderRadius": undefined,
      "flex": 1,
      "flexDirection": undefined,
      "height": undefined,
      "justifyContent": undefined,
      "margin": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "padding": undefined,
      "paddingBottom": undefined,
      "paddingHorizontal": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "width": undefined,
    }
  }
>
  <RCTScrollView
    contentOffset={
      Object {
        "x": NaN,
        "y": 0,
      }
    }
    data={
      Object {
        "claim": Object {
          "Serto ID": Object {
            "children": Array [
              Object {
                "age": 4,
                "name": "Bob",
              },
              Object {
                "age": 9,
                "name": "Alice",
              },
            ],
            "country": "USA",
            "dateOfBirth": "22-01-75",
            "name": "Sarah Adamson",
          },
        },
        "exp": 1579478400,
        "hash": "testHash",
        "iat": 1562769371,
        "iss": "Serto Identity Platform",
        "sub": "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
        "type": "Some VC",
        "vc": Array [],
      }
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    pagingEnabled={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="center"
    stickyHeaderIndices={Array []}
    testID="FLATLIST"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`Credential renders correctly without data 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "alignItems": undefined,
      "backgroundColor": "#000000",
      "borderRadius": undefined,
      "flex": 1,
      "flexDirection": undefined,
      "height": undefined,
      "justifyContent": undefined,
      "margin": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "padding": undefined,
      "paddingBottom": undefined,
      "paddingHorizontal": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "width": undefined,
    }
  }
>
  <RCTScrollView
    contentOffset={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    data={null}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    pagingEnabled={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="center"
    stickyHeaderIndices={Array []}
    testID="FLATLIST"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`Credential test cancel sharing 1`] = `
Object {
  "headerLeft": <HeaderButtons
    HeaderButtonComponent={[Function]}
    OverflowIcon={<View />}
    left={false}
  >
    <Item
      color="#FFFFFF"
      show="always"
      testID="DONE_BTN"
      title="Done"
    />
  </HeaderButtons>,
  "headerRight": <HeaderButtons
    HeaderButtonComponent={[Function]}
    OverflowIcon={<View />}
    left={false}
  >
    <Item
      color="#FFFFFF"
      onPress={[Function]}
      show="always"
      testID="CANCEL_BTN"
      title="Cancel"
    />
  </HeaderButtons>,
  "headerStyle": Object {
    "backgroundColor": "#f4511e",
  },
  "title": "Credential",
}
`;

exports[`Credential test done button 1`] = `
Object {
  "headerLeft": <HeaderButtons
    HeaderButtonComponent={[Function]}
    OverflowIcon={<View />}
    left={false}
  >
    <Item
      color="#FFFFFF"
      onPress={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      show="always"
      testID="DONE_BTN"
      title="Done"
    />
  </HeaderButtons>,
  "headerRight": <HeaderButtons
    HeaderButtonComponent={[Function]}
    OverflowIcon={<View />}
    left={false}
  >
    <Item
      color="#FFFFFF"
      onPress={[Function]}
      show="always"
      testID="SHARE_BTN"
      title="Share"
    />
  </HeaderButtons>,
  "headerStyle": Object {
    "backgroundColor": "#f4511e",
  },
  "title": "Credential",
}
`;

exports[`Credential test sharing button 1`] = `
Object {
  "headerLeft": <HeaderButtons
    HeaderButtonComponent={[Function]}
    OverflowIcon={<View />}
    left={false}
  >
    <Item
      color="#FFFFFF"
      show="always"
      testID="DONE_BTN"
      title="Done"
    />
  </HeaderButtons>,
  "headerRight": <HeaderButtons
    HeaderButtonComponent={[Function]}
    OverflowIcon={<View />}
    left={false}
  >
    <Item
      color="#FFFFFF"
      onPress={[Function]}
      show="always"
      testID="SHARE_BTN"
      title="Share"
    />
  </HeaderButtons>,
  "headerStyle": Object {
    "backgroundColor": "#f4511e",
  },
  "title": "Credential",
}
`;
